--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mobile-detect": "^1.4.5",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
