--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-markdown": "^9.0.1",
     "react-multi-carousel": "^2.8.4",
     "yup": "^1.3.2"
   },
