--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.11.0",
     "react-markdown": "^9.0.1",
     "react-multi-carousel": "^2.8.4",
+    "remark-gfm": "^4.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
